<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_messages"
        android:icon="@drawable/ic_nav_chat"
        android:title="@string/nav_messages" />
    <item
        android:id="@+id/nav_lends"
        android:icon="@drawable/ic_nav_lends"
        android:title="@string/nav_lends" />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_nav_alerts"
        android:title="@string/nav_notifications" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>