<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/headerBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lendly_blue"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/screen_padding"
        android:paddingTop="@dimen/space_xl"
        android:paddingBottom="@dimen/space_lg">

        <LinearLayout
            android:id="@+id/searchBarContainer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/search_bar_height"
            android:background="@drawable/bg_search_bar"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/space_lg">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@null"
                android:src="@drawable/search_icon"
                app:tint="@color/search_icon_tint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_md"
                android:text="@string/search_hint"
                android:textColor="@color/search_icon_tint"
                android:textSize="@dimen/text_body" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFavorites"
                style="@style/Lendly.Button.Header"
                android:layout_width="0dp"
                android:layout_marginEnd="@dimen/space_xs"
                android:layout_weight="1"
                android:text="@string/favorites"
                app:icon="@drawable/fav_icon" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnHistory"
                style="@style/Lendly.Button.Header"
                android:layout_width="0dp"
                android:layout_marginHorizontal="@dimen/space_xs"
                android:layout_weight="1"
                android:text="@string/history"
                app:icon="@drawable/history_icon" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOrders"
                style="@style/Lendly.Button.Header"
                android:layout_width="0dp"
                android:layout_marginStart="@dimen/space_xs"
                android:layout_weight="1"
                android:text="@string/orders"
                app:icon="@drawable/order_icon" />
        </LinearLayout>
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/space_xxl">

                <TextView
                    style="@style/Lendly.SectionTitle"
                    android:layout_marginStart="@dimen/screen_padding"
                    android:layout_marginTop="@dimen/space_xl"
                    android:text="@string/categories_title" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_md"
                    android:clipToPadding="false"
                    android:paddingHorizontal="@dimen/space_md"
                    android:scrollbars="none">

                    <LinearLayout
                        android:id="@+id/categoryRow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" />
                </HorizontalScrollView>

                <TextView
                    android:id="@+id/txtSectionTitle"
                    style="@style/Lendly.SectionTitle"
                    android:layout_marginStart="@dimen/screen_padding"
                    android:layout_marginTop="@dimen/space_xxl"
                    android:text="@string/being_let_go_title" />

                <TextView
                    android:id="@+id/txtEmptyHome"
                    style="@style/Lendly.EmptyText"
                    android:layout_marginTop="48dp"
                    android:text="Nothing listed yet." />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerItems"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_sm"
                    android:nestedScrollingEnabled="false"
                    android:paddingHorizontal="@dimen/space_md"
                    tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    tools:spanCount="2" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>